integration_tests/juniper_tests/fail/object/impl_no_underscore.rs
struct Object {}

#[juniper::graphql_object]
impl Object {
    fn __test(&self) -> String {
        String::new()
    }
}

fn main() {}
